--- a/assets/scss/_media.scss
+++ b/assets/scss/_media.scss
@@ -1,25 +1,25 @@
 @media (max-width: 1400px) {
-  body .showcase .case {
+  body .showcase .container .case {
     gap: 0;
   }
-  body .showcase {
-    padding: 48px 138px;
-  }
+  // body .showcase {
+  //   padding: 48px 138px;
+  // }
 }
 @media (max-width: 1250px) {
   body {
-    .showcase h1 {
+    .showcase .container h1 {
       font-size: 40px;
       max-width: 956px;
     }
-    .showcase p {
+    .showcase .container p {
       font-size: 16px;
       max-width: 700px;
     }
   }
 }
 @media (max-width: 1180px) {
-  body .showcase .case {
+  body .showcase .container .case {
     display: flex;
     gap: 30px;
     .box2 {
@@ -28,7 +28,7 @@
   }
 }
 @media (max-width: 1170px) {
-  body .showcase .case {
+  body .showcase .container .case {
     display: flex;
     gap: 30px;
     .box2 {
@@ -44,10 +44,10 @@
   }
 }
 @media (max-width: 1100px) {
-  body .showcase .case .box2 {
+  body .showcase .container .case .box2 {
     margin: 0;
   }
-  body header {
+  body header .container {
     .open {
       display: block;
     }
@@ -135,7 +135,7 @@
     }
   }
   body {
-    header {
+    header .container {
       .lab {
         display: none;
       }
@@ -143,16 +143,16 @@
   }
 }
 @media (max-width: 900px) {
-  body .showcase h1 {
+  body .showcase .container h1 {
     font-size: 30px;
   }
-  body .showcase p {
+  body .showcase .container p {
     font-size: 14px;
   }
-  body .showcase .case .box .right p {
+  body .showcase .container .case .box .right p {
     font-size: 12px;
   }
-  body .showcase .case {
+  body .showcase .container .case {
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -160,88 +160,88 @@
       margin: 0 auto;
     }
   }
-  body .showcase {
-    padding: 20px 100px;
-  }
+  // body .showcase {
+  //   padding: 20px 100px;
+  // }
 }
 @media (max-width: 550px) {
-  body {
-    header {
-      padding: 54px 80px;
-    }
-    .showcase {
-      padding: 20px 60px;
-    }
-  }
-  body header .logo a {
+  // body {
+  //   header {
+  //     padding: 54px 80px;
+  //   }
+  //   .showcase {
+  //     padding: 20px 60px;
+  //   }
+  // }
+  body header .container .logo a {
     font-size: 28px;
   }
 }
-@media (max-width: 450px) {
-  body {
-    header {
-      padding: 54px 50px;
-    }
-    .showcase {
-      padding: 20px 50px;
-    }
-  }
-}
+// @media (max-width: 450px) {
+//   body {
+//     header {
+//       padding: 54px 50px;
+//     }
+//     .showcase {
+//       padding: 20px 50px;
+//     }
+//   }
+// }
 @media (max-width: 470px) {
-  body .showcase h1 {
+  body .showcase .container h1 {
     font-size: 24px;
   }
-  body .showcase p {
+  body .showcase .container p {
     font-size: 12px;
   }
-  body .showcase .case {
+  body .showcase .container .case {
     gap: 100px;
   }
-  body header nav ul {
+  body header .container nav ul {
     right: 5%;
   }
-  body .showcase button{
+  body .showcase .container button {
     font-size: 12px;
     padding: 5px 8px;
   }
 }
 @media (max-width: 370px) {
-  body header nav ul {
+  body header .container nav ul {
     right: 3%;
     padding: 40px 10px;
   }
-  body .showcase .case .box {
+  body .showcase .container .case .box {
     display: flex;
     flex-direction: column;
   }
-  body .showcase h1{
+  body .showcase .container h1 {
     font-size: 16px;
   }
-  body .showcase p{
+  body .showcase .container p {
     font-size: 11px;
   }
-  body .showcase .case .box .left p{
+  body .showcase .container .case .box .left p {
     font-size: 22px;
   }
 }
 @media (max-width: 300px) {
-    body header nav ul{
-        padding: 40px 5px;
-    }
-    body .showcase .case .box .right p{
-        font-size: 10px;
-    }
+  body header .container nav ul {
+    padding: 40px 5px;
+  }
+  body .showcase .container .case .box .right p {
+    font-size: 10px;
+  }
 }
 @media (max-width: 280px) {
-    body header nav ul{
-        display: flex;
-        flex-direction: column;
-        padding: 5px 20px;
-    }
-    body .showcase .case .box .left{
-        text-align: center;
-    }
-    body header .logo a{
-        font-size: 18px;
-    }
+  body header .container nav ul {
+    display: flex;
+    flex-direction: column;
+    padding: 5px 20px;
+  }
+  body .showcase .container .case .box .left {
+    text-align: center;
+  }
+  body header .container .logo a {
+    font-size: 18px;
+  }
 }
